<resources>
    <string name="app_name">Easy Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes">Notes</string>
    <string name="title">Title</string>
    <string name="september_2_2022">September 2, 2022</string>
    <string name="note">Note</string>
    <string name="your_notes">Your Notes</string>
    <string name="start_taking_some_notes_to_remind_you_of_nsomething_important">Start taking some notes to remind you of\nsomething important</string>
    <string name="search_notes">Search notes</string>
    <string name="favorite_notes">Favorite notes</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="custom">Custom</string>
    <string name="appearance">Appearance</string>
    <string name="about">About</string>
    <string name="rate_us">Rate Us</string>
    <string name="follow_us">Follow us</string>
    <string name="share_app">Share App</string>
    <string name="version">Version:</string>
    <string name="easy_notes">Easy Notes</string>
    <string name="make_your_private_notes">Make Your Private Notes</string>
    <string name="get_started">Get Started</string>
    <string name="how_would_you_rate_our">How Would You Rate Our</string>
    <string name="app_experience">App Experience</string>
    <string name="submit">Submit</string>
    <string name="no_thanks">No, Thanks!</string>
    <string name="how_to_make_your_success">How to make your Success</string>
    <string name="you_to_make_your_successaf_aditya_u_are_the_best_in_the_world_ef_es_aditya_u_are_the_best_in_the_worl_aditya_u_are_the_best_in_the_worl_aditya_u_are_the_best_in_the_worlf_sfgt_er_aditya_u_are_the_best_in_the_worler_tert_era_trea_t_re_ter_t_rt_er_tr_tr_tr_etre_dsfg">you to make your Successaf aditya u are the best in the world ef es aditya u are the best in the worl aditya u are the best in the worl aditya u are the best in the worlf sfgt er aditya u are the best in the worler tert era trea t re ter t rt er tr tr tr etre dsfg</string>
    <string name="sep_2_2022">Sep 2, 2022</string>
    <string name="clear_all_data">Clear All Data</string>
</resources>