<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFAFF"
    tools:context=".OnBoardingScreenActivity">
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_centerInParent="true"
        android:layout_marginBottom="-100dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/splash_icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easy_notes"
        android:textColor="#000000"
        android:layout_below="@id/splash_icon"
        android:textSize="28sp"
        android:id="@+id/text1"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_your_private_notes"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_below="@id/text1"
        android:layout_centerHorizontal="true"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#000000"
        android:text="@string/get_started"
        android:id="@+id/get_start"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"/>




</RelativeLayout>