<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    tools:context=".utils.RatingDialogFragment">

    <LinearLayout
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/smite_rating_day_icon"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/rating_black_color"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/how_would_you_rate_our"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_experience"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RatingBar
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="17dp"
                android:theme="@style/MyRatingBar" />



            <androidx.cardview.widget.CardView
                android:id="@+id/submit_rating"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/rating_btn_color"
                app:cardCornerRadius="38dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/submit"
                    android:textColor="@color/note_text_color"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/no_thanks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_thanks"
                android:textColor="@color/note_text_color"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>