<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/backgroundColor"
        tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="18dp"
            android:paddingTop="18dp"
            android:paddingEnd="18dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/your_notes"
                android:textColor="@color/black"
                android:textSize="34sp" />

            <ImageView
                android:id="@+id/setting"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="14dp"
                android:background="@drawable/settings_icon"
                android:backgroundTint="@color/black"
                android:visibility="visible" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text1"
                android:layout_marginTop="8dp"
                android:text="@string/start_taking_some_notes_to_remind_you_of_nsomething_important"
                android:textColor="@color/grey_text_color"
                android:textSize="15sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/searchCardView"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_below="@id/text2"
                android:layout_marginStart="2dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="2dp"
                app:cardCornerRadius="28dp">

                <EditText
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:clickable="true"
                    android:drawableEnd="@drawable/search_icon"
                    android:drawableTint="@color/black"
                    android:focusableInTouchMode="true"
                    android:hint="@string/search_notes"
                    android:paddingStart="22dp"
                    android:paddingEnd="18dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/tab_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/searchCardView"
                android:layout_marginTop="20dp"
                android:background="@drawable/tabs_selector"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/note_tab"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:background="@drawable/tabs_item_selector"
                    android:gravity="center"
                    android:text="@string/note"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/favorite_notes_tab"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/favorite_notes"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tab_view"
                android:background="@color/backgroundColor">

            </androidx.fragment.app.FragmentContainerView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.core.widget.NestedScrollView>

