<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".addUpdateNotes.AddUpdateNotesActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <RelativeLayout
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/back_ic"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:background="@drawable/back_icon"
                android:backgroundTint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toRightOf="@id/back_ic"
                android:text="@string/notes"
                android:textColor="@color/note_text_color"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/favorite_note_icon"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/outline_star_icon"
                    android:backgroundTint="@color/black" />

                <ImageView
                    android:id="@+id/delete_note_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/delete_icon"
                    android:backgroundTint="@color/black" />

                <ImageView
                    android:id="@+id/save_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/done_icon"
                    android:backgroundTint="@color/black" />


            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="22dp">


            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/title"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginTop="16dp"
                android:maxLines="2"
                android:text="@string/september_2_2022"
                android:textColor="@color/grey_text_color"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/date"
                android:layout_marginTop="26dp"
                android:background="@null"
                android:hint="@string/note"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="18sp" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>