<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".SettingActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_ic"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:background="@drawable/back_icon"
            android:backgroundTint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:text="@string/settings"
            android:textColor="@color/note_text_color"
            android:textSize="22sp" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/custom"
                android:textColor="@color/blue"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <ImageView
                    android:id="@+id/theme_icon"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:background="@drawable/darkmode"
                    android:backgroundTint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_toRightOf="@id/theme_icon"
                    android:text="Dark Mode"
                    android:textColor="@color/note_text_color"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/app_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:visibility="visible" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/clearAllData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <ImageView
                    android:id="@+id/clearAllDataText"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:background="@drawable/refresh_setting"
                    android:backgroundTint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toRightOf="@id/clearAllDataText"
                    android:text="Reset Settings"
                    android:textColor="@color/note_text_color"
                    android:textSize="20sp" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/about"
                android:textColor="@color/blue"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/rateUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:background="@drawable/outline_star_icon"
                    android:backgroundTint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="@string/rate_us"
                    android:textColor="@color/note_text_color"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/followUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:background="@drawable/follow_icon"
                    android:backgroundTint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="@string/follow_us"
                    android:textColor="@color/note_text_color"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:background="@drawable/phone_icon"
                    android:backgroundTint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="Contacts"
                    android:textColor="@color/note_text_color"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/shareApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:background="@drawable/share_icon"
                    android:backgroundTint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="@string/share_app"
                    android:textColor="@color/note_text_color"
                    android:textSize="20sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:background="@drawable/version_icon"
                    android:backgroundTint="@color/black" />

                <TextView
                    android:id="@+id/appVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="@string/version"
                    android:textColor="@color/note_text_color"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>